--- a/src/main/resources/templates/clientes/search.html
+++ b/src/main/resources/templates/clientes/search.html
@@ -19,7 +19,7 @@
 					<div class="container">
 						<div class="row mb-2">
 							<div class="col-sm-6">
-								<h3 class="m-0">Clientes</h3>
+								<h3 class="m-0"><i class="fas fa-users fa-sm mr-2"></i>Clientes</h3>
 							</div>
 							<div class="col-sm-6">
 								<ol class="breadcrumb float-sm-right">
