--- a/src/main/resources/templates/auths/login.html
+++ b/src/main/resources/templates/auths/login.html
@@ -14,7 +14,7 @@
 			<div class="card card-outline">
 				<div class="card-header text-center">
 					<a href="" class="h1">
-						<img th:src="@{/images/logo.png}" alt="Logo Biblio" class="brand-image">
+						<img th:src="@{/images/logo.png}" alt="Logo Biblio" class="brand-image" style="width: 100px; height: auto;">
 					</a>
 				</div>
 				<div class="card-body">
