--- a/src/main/resources/templates/livro/create.html
+++ b/src/main/resources/templates/livro/create.html
@@ -1,1 +1,111 @@
-"teste" 
+<!DOCTYPE html>
+<html lang="pt-br" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
+	<head>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<title>Biblio | Livros</title>
+		<link rel="icon" type="image/x-icon" th:href="@{/images/favicon.ico}">
+		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback">
+		<link rel="stylesheet" th:href="@{/vendors/fontawesome/css/all.min.css}">
+		<link rel="stylesheet" th:href="@{/vendors/adminlte/css/adminlte.min.css}">
+	</head>
+	<body class="hold-transition layout-top-nav layout-navbar-fixed layout-footer-fixed">
+		<div class="wrapper">
+			<div th:replace="~{frags/nav :: sample}"></div>
+			<div class="content-wrapper">
+				<div class="content-header">
+					<div class="container">
+						<div class="row mb-2">
+							<div class="col-sm-6">
+								<h3 class="m-0"><i class="fas fa-users fa-sm mr-2"></i>Livros</h3>
+							</div>
+							<div class="col-sm-6">
+								<ol class="breadcrumb float-sm-right">
+									<li class="breadcrumb-item"><a th:href="@{/livros}">Livros</a></li>
+									<li class="breadcrumb-item active">Novo</li>
+								</ol>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="content">
+					<div class="container">
+						<div class="row">
+							<div class="col-lg-12">
+								<div class="card">
+									<form class="form-horizontal" autocomplete="off" method="post" th:action="@{/livros/new}" th:object="${livro}">
+										<div class="card-header">
+											<h5 class="card-title m-0">
+												<i class="fas fa-plus fa-sm mr-2"></i>Novo
+											</h5>
+										</div>
+										<div class="card-body">
+											<div class="alert alert-danger alert-dismissible" th:if="${#fields.hasErrors('*')}">
+												<button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
+												<h5><i class="icon fas fa-ban"></i>Atenção</h5>
+												<div th:each="error : ${#fields.errors()}" th:text="${error}"></div>
+											</div>
+											<div class="form-group row">
+												<label for="isbn" class="col-sm-2 col-form-label">Isbn</label>
+												<div class="col-sm-5">
+													<input type="text" class="form-control isbn" th:field="*{isbn}" th:classappend="${#fields.hasErrors('isbn')} ? is-invalid">
+												</div>
+											</div>
+											<div class="form-group row">
+												<label for="titulo" class="col-sm-2 col-form-label">Titulo</label>
+												<div class="col-sm-5">
+													<input type="text" class="form-control" th:field="*{titulo}" th:classappend="${#fields.hasErrors('titulo')} ? is-invalid">
+												</div>
+											</div>
+											<div class="form-group row">
+												<label for="anoDePublicacao" class="col-sm-2 col-form-label">Ano de publicação</label>
+												<div class="col-sm-5">
+													<input type="text" class="form-control date" th:field="*{anoDePublicacao}" th:classappend="${#fields.hasErrors('AnoDePublicacao')} ? is-invalid">
+												</div>
+											</div>
+											<div class="form-group row">
+												<label for="idioma" class="col-sm-2 col-form-label">Idioma</label>
+												<div class="col-sm-5">
+													<input type="text" class="form-control idioma" th:field="*{idioma}" th:classappend="${#fields.hasErrors('idioma')} ? is-invalid">
+												</div>
+											</div>
+											<div class="form-group row">
+												<label for="pagina" class="col-sm-2 col-form-label">Página</label>
+												<div class="col-sm-5">
+													<input type="text" class="form-control pagina" th:field="*{pagina}" th:classappend="${#fields.hasErrors('pagina')} ? is-invalid">
+												</div>
+											</div>
+											<div class="form-group row">
+												<label for="faixaEtaria" class="col-sm-2 col-form-label">Faixa Etaria</label>
+												<div class="col-sm-5">
+													<input type="text" class="form-control" th:field="*{faixaEtaria}" th:classappend="${#fields.hasErrors('faixaEtaria')} ? is-invalid">
+												</div>
+											</div>
+                                            <div class="form-group row">
+												<label for="Disponivel" class="col-sm-2 col-form-label">Ststus</label>
+												<div class="col-sm-5">
+													<input type="text" class="form-control" th:field="*{Disponivel}" th:classappend="${#fields.hasErrors('Disponivel')} ? is-invalid">
+												</div>
+											</div>
+										</div>
+										<div class="card-footer">
+											<button class="btn btn-primary">
+												<i class="fas fa-save fa-sm mr-2"></i>Salvar
+											</button>
+										</div>
+									</form>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div th:replace="~{frags/footer :: sample}"></div>
+		</div>
+		<script th:src="@{/vendors/jquery/js/jquery.min.js}"></script>
+		<script th:src="@{/vendors/bootstrap/js/bootstrap.bundle.min.js}"></script>
+		<script th:src="@{/vendors/inputmask/js/inputmask.min.js}"></script>
+		<script th:src="@{/vendors/adminlte/js/adminlte.min.js}"></script>
+		<script th:src="@{/js/general/mask.js}"></script>
+	</body>
+</html>
