Inclusão do Autofocus para o username na entrada da página

--- a/src/main/resources/templates/auths/login.html
+++ b/src/main/resources/templates/auths/login.html
@@ -26,7 +26,7 @@
 							<span class="text-sm">Usuário e/ou senha inválido(s)</span>
 						</div>
 						<div class="input-group mb-3">
-							<input type="text" class="form-control" placeholder="Usuário" name="username">
+							<input type="text" class="form-control" placeholder="Usuário" name="username" autofocus>
 							<div class="input-group-append">
 								<div class="input-group-text">
 									<span class="fas fa-user"></span>
