--- a/src/main/resources/templates/livros/update.html
+++ b/src/main/resources/templates/livros/update.html
@@ -33,7 +33,7 @@
 						<div class="row">
 							<div class="col-lg-12">
 								<div class="card">
-									<form class="form-horizontal" autocomplete="off" method="post" th:action="@{/clientes/edit}" th:object="${cliente}">
+									<form class="form-horizontal" autocomplete="off" method="post" th:action="@{/livros/edit}" th:object="${livro}">
 										<div class="card-header">
 											<h5 class="card-title m-0">
 												<i class="fas fa-edit fa-sm mr-2"></i>Editar
@@ -50,44 +50,79 @@
 											<div class="form-group row">
 												<label for="isbn" class="col-sm-2 col-form-label">Isbn</label>
 												<div class="col-sm-5">
-													<input type="text" class="form-control isbn" th:field="*{isbn}" th:classappend="${#fields.hasErrors('isbn')} ? is-invalid">
+													<input type="text" class="form-control isbn" th:field="*{isbn}"
+														   th:classappend="${#fields.hasErrors('isbn')} ? is-invalid"
+														   maxlength="13" oninput="this.value = this.value.replace(/[^0-9]/g, '').slice(0,13);" autofocus>
 												</div>
 											</div>
 											<div class="form-group row">
 												<label for="titulo" class="col-sm-2 col-form-label">Titulo</label>
 												<div class="col-sm-5">
-													<input type="text" class="form-control" th:field="*{titulo}" th:classappend="${#fields.hasErrors('titulo')} ? is-invalid">
+													<input type="text" class="form-control" th:field="*{titulo}"
+														   th:classappend="${#fields.hasErrors('titulo')} ? is-invalid">
+												</div>
+											</div>
+											<div class="form-group row">
+												<label for="editora" class="col-sm-2 col-form-label">Editora</label>
+												<div class="col-sm-5">
+													<input type="text" class="form-control" th:field="*{editora}"
+														   th:classappend="${#fields.hasErrors('editora')} ? is-invalid">
 												</div>
 											</div>
 											<div class="form-group row">
 												<label for="anoDePublicacao" class="col-sm-2 col-form-label">Ano de publicação</label>
 												<div class="col-sm-5">
-													<input type="text" class="form-control date" th:field="*{anoDePublicacao}" th:classappend="${#fields.hasErrors('AnoDePublicacao')} ? is-invalid">
+													<input type="text" class="form-control" th:field="*{anoDePublicacao}"
+														   th:classappend="${#fields.hasErrors('anoDePublicacao')} ? 'is-invalid'"
+														   maxlength="4" oninput="this.value = this.value.replace(/[^0-9]/g, '').slice(0,4);">
+												</div>
+											</div>
+											<div class="form-group row">
+												<label for="autores" class="col-sm-2 col-form-label">Autores</label>
+												<div class="col-sm-5">
+													<input type="text" class="form-control" th:field="*{autores}"
+														   th:classappend="${#fields.hasErrors('autores')} ? is-invalid">
 												</div>
 											</div>
 											<div class="form-group row">
 												<label for="idioma" class="col-sm-2 col-form-label">Idioma</label>
 												<div class="col-sm-5">
-													<input type="text" class="form-control idioma" th:field="*{idioma}" th:classappend="${#fields.hasErrors('idioma')} ? is-invalid">
+													<input type="text" class="form-control idioma" th:field="*{idioma}"
+														   th:classappend="${#fields.hasErrors('idioma')} ? is-invalid">
 												</div>
 											</div>
 											<div class="form-group row">
 												<label for="pagina" class="col-sm-2 col-form-label">Página</label>
 												<div class="col-sm-5">
-													<input type="text" class="form-control pagina" th:field="*{pagina}" th:classappend="${#fields.hasErrors('pagina')} ? is-invalid">
+													<input type="text" class="form-control" th:field="*{pagina}"
+														   th:classappend="${#fields.hasErrors('pagina')} ? is-invalid"
+														   maxlength="4" oninput="this.value = this.value.replace(/[^0-9]/g, '').slice(0,4);">
 												</div>
 											</div>
 											<div class="form-group row">
 												<label for="faixaEtaria" class="col-sm-2 col-form-label">Faixa Etaria</label>
 												<div class="col-sm-5">
-													<input type="text" class="form-control" th:field="*{faixaEtaria}" th:classappend="${#fields.hasErrors('faixaEtaria')} ? is-invalid">
+													<input type="text" class="form-control" th:field="*{faixaEtaria}"
+														   th:classappend="${#fields.hasErrors('faixaEtaria')} ? is-invalid"
+														   maxlength="2" oninput="this.value = this.value.replace(/[^0-9]/g, '').slice(0,2);">
 												</div>
 											</div>
                                             <div class="form-group row">
-												<label for="Disponivel" class="col-sm-2 col-form-label">Ststus</label>
+												<label for="Disponivel" class="col-sm-2 col-form-label">Disponível</label>
 												<div class="col-sm-5">
-													<input type="text" class="form-control" th:field="*{Disponivel}" th:classappend="${#fields.hasErrors('Disponivel')} ? is-invalid">
+													<input type="text" class="form-control"
+														   th:classappend="${#fields.hasErrors('Disponivel')} ? is-invalid"
+														   th:value="*{Disponivel} ? 'Sim' : 'Não'">
 												</div>
+												<!--<div class="form-group row">
+													<label for="Disponivel" class="col-sm-2 col-form-label">D Select</label>
+													<div class="col-sm-5">
+														<select class="form-control" th:field="*{disponivel}" th:classappend="${#fields.hasErrors('disponivel')} ? is-invalid">
+															<option th:value="NULL">Selecione</option>
+															<option th:each="disponivel : ${genders}" th:value="${gender.getName()}" th:text="${gender.getDescription()}"></option>
+														</select>
+													</div>
+												</div> -->
 											</div>
 										</div>
 										<div class="card-footer">
