Remoção do Select - Disponibilidade deve ser modificada por Empréstimo/Devolução

--- a/src/main/resources/templates/livros/update.html
+++ b/src/main/resources/templates/livros/update.html
@@ -107,7 +107,7 @@
 														   maxlength="2" oninput="this.value = this.value.replace(/[^0-9]/g, '').slice(0,2);">
 												</div>
 											</div>
-											<div class="form-group row">
+											<!-- <div class="form-group row">
 												<label for="Disponivel" class="col-sm-2 col-form-label">Disponível</label>
 												<div class="col-sm-1">
 													<select class="form-control" th:field="*{Disponivel}"
@@ -116,7 +116,7 @@
 														<option value="false" th:selected="${Disponivel == false}">Não</option>
 													</select>
 												</div>
-											</div>
+											</div> Disponível deverá ser alterado por Empréstimo/Devolução -->
 										</div>
 										<div class="card-footer">
 											<button class="btn btn-primary">
