--- a/src/main/resources/templates/livros/update.html
+++ b/src/main/resources/templates/livros/update.html
@@ -107,6 +107,10 @@
 														   maxlength="2" oninput="this.value = this.value.replace(/[^0-9]/g, '').slice(0,2);">
 												</div>
 											</div>
+												<div hidden="true" class="col-sm-5">
+													<input type="text" class="form-control" th:field="*{disponivel}"
+														   th:classappend="${#fields.hasErrors('disponivel')} ? is-invalid">
+												</div>
 											<!-- <div class="form-group row">
 												<label for="Disponivel" class="col-sm-2 col-form-label">Disponível</label>
 												<div class="col-sm-1">
