--- a/src/main/resources/templates/errors/400.html
+++ b/src/main/resources/templates/errors/400.html
@@ -25,7 +25,7 @@
 										Essa requisição falhou devido não atender requisitos básicos da aplicação.
 										Você pode <a th:href="@{/}">voltar á página inicial</a> 
 										para continuar usando a aplicação, ou tirar dúvidas em: 
-										<b>admin@caotica.br</b>.
+										<b>admin@biblio.br</b>.
 									</p>
 									<a th:href="@{/}" class="btn btn-secondary btn-block"><i class="fa fa-home fa-sm mr-2"></i>Início</a>
 								</div>
