--- a/src/main/resources/templates/frags/nav.html
+++ b/src/main/resources/templates/frags/nav.html
@@ -24,8 +24,8 @@
 							<li class="nav-item" th:classappend="${menu} == 'livros' ? 'active'">
 								<a th:href="@{/livros}" class="nav-link"><i class="fas fa-livros fa-sm mr-2"></i>Livros</a>
 							</li>
-							<li class="nav-item" th:classappend="${menu} == 'emprestimos' ? 'active'">
-								<a th:href="@{/emprestimos}" class="nav-link"><i class="fas fa-emprestimos fa-sm mr-2"></i>Empréstimos</a>
+							<li class="nav-item" th:classappend="${menu} == 'movimentacoes' ? 'active'">
+								<a th:href="@{/movimentacoes}" class="nav-link"><i class="fas fa-movimentacoes fa-sm mr-2"></i>Movimentações</a>
 							</li>
 							<li class="nav-item" th:classappend="${menu} == 'devolucoes' ? 'active'">
 								<a th:href="@{/devolucoes}" class="nav-link"><i class="fas fa-devolucoes fa-sm mr-2"></i>Devoluções</a>
