--- a/src/main/resources/templates/movimentacoes/search.html
+++ b/src/main/resources/templates/movimentacoes/search.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Biblio | Clientes</title>
+		<title>Biblio | Movimentações</title>
 		<link rel="icon" type="image/x-icon" th:href="@{/images/favicon.ico}">
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback">
 		<link rel="stylesheet" th:href="@{/vendors/fontawesome/css/all.min.css}">
@@ -19,11 +19,11 @@
 					<div class="container">
 						<div class="row mb-2">
 							<div class="col-sm-6">
-								<h3 class="m-0"><i class="fas fa-users fa-sm mr-2"></i>Clientes</h3>
+								<h3 class="m-0"><i class="fas fa-sign-out-alt fa-sm mr-2"></i>Movimentações</h3>
 							</div>
 							<div class="col-sm-6">
 								<ol class="breadcrumb float-sm-right">
-									<li class="breadcrumb-item"><a th:href="@{/clientes}">Clientes</a></li>
+									<li class="breadcrumb-item"><a th:href="@{/movimentacoes}">Movimentações</a></li>
 									<li class="breadcrumb-item active">Pesquisar</li>
 								</ol>
 							</div>
@@ -46,27 +46,26 @@
 												<tr>
 													<th>CPF</th>
 													<th>Nome</th>
-													<th>Nascimento</th>
 													<th>Celular</th>
 													<th>Telefone</th>
 													<th>Email</th>
-													<th>Ações</th>
+													<th>Ação</th>
 												</tr>
                                             </thead>
                                             <tbody>
                                             	<tr th:each="cliente : ${clientes}">
                                             		<td th:text="${cliente.getCpf()}"></td>
                                             		<td th:text="${cliente.getNome()}"></td>
-                                            		<td th:text="${#dates.format(cliente.getNascimento(), 'dd-MM-yyyy')}"></td>
                                             		<td th:text="${cliente.getCellphone()}"></td>
 													<td th:text="${cliente.getTelephone()}"></td>
 													<td th:text="${cliente.getEmail()}"></td>
                                             		<td>
-                                            			<a th:href="@{/clientes/{id}/edit(id=${cliente.getId()})}" title="Editar">
-															<i class="fas fa-edit fa-sm mr-2 text-primary"></i></a>
-														<a th:href="@{/clientes/{id}/delete(id=${cliente.id})}" title="Remover"
-														   onclick="return confirm('Confirma a remoção do cliente?');">
-															<i class="fas fa-trash fa-sm mr-2 text-danger"></i></a>
+                                            			<a th:href="@{/clientes/{id}/edit(id=${cliente.getId()})}" title="Visualização">
+															<i class="fas fa-eye fa-sm mr-2 text-primary"></i></a>
+														<a th:href="@{/clientes/{id}/edit(id=${cliente.getId()})}" title="Empréstimo">
+                                                            <i class="fas fa-book fa-sm mr-2 text-success"></i></a>
+														<a th:href="@{/clientes/{id}/edit(id=${cliente.getId()})}" title="Devolução">
+                                                            <i class="fas fa-undo-alt fa-sm mr-2 text-danger"></i></a>
 													</td>
                                             	</tr>
                                             </tbody>
@@ -74,11 +73,10 @@
                                             	<tr>
 													<th>CPF</th>
 													<th>Nome</th>
-													<th>Nascimento</th>
 													<th>Celular</th>
 													<th>Telefone</th>
 													<th>Email</th>
-													<th>Ações</th>
+													<th>Ação</th>
                                             	</tr>
                                             </tfoot>
 										</table>
