--- a/src/main/resources/templates/movimentacoes/search.html
+++ b/src/main/resources/templates/movimentacoes/search.html
@@ -60,7 +60,7 @@
 													<td th:text="${cliente.getTelephone()}"></td>
 													<td th:text="${cliente.getEmail()}"></td>
                                             		<td>
-                                            			<a th:href="@{/clientes/{id}/edit(id=${cliente.getId()})}" title="Visualização">
+                                            			<a th:href="@{/movimentacoes/{id}/view(id=${cliente.getId()})}" title="Visualização">
 															<i class="fas fa-eye fa-sm mr-2 text-primary"></i></a>
 														<a th:href="@{/clientes/{id}/edit(id=${cliente.getId()})}" title="Empréstimo">
                                                             <i class="fas fa-book fa-sm mr-2 text-success"></i></a>
