Ajustada a página para a devolução de livro

--- a/src/main/resources/templates/movimentacoes/view.html
+++ b/src/main/resources/templates/movimentacoes/view.html
@@ -51,7 +51,7 @@
 													<th>Idioma</th>
 													<th>Ano De Publicação</th>
 													<th>Disponível</th>
-													<th>Ações</th>
+													<th>Devolução</th>
 												</tr>
                                             </thead>
                                             <tbody>
@@ -76,7 +76,7 @@
 													<th>Idioma</th>
 													<th>Ano De Publicação</th>
 													<th>Disponível</th>
-													<th>Ações</th>
+													<th>Devolução</th>
                                             	</tr>
                                             </tfoot>
 										</table>
