--- a/src/main/resources/templates/movimentacoes/search.html
+++ b/src/main/resources/templates/movimentacoes/search.html
@@ -60,9 +60,9 @@
 													<td th:text="${cliente.getTelephone()}"></td>
 													<td th:text="${cliente.getEmail()}"></td>
                                             		<td>
-                                            			<a th:href="@{/movimentacoes/{id}/view(id=${cliente.getId()})}" title="Visualização">
+                                            			<a th:href="@{/movimentacoes/{id}/view(id=${cliente.getId()})}" title="Visualizar">
 															<i class="fas fa-eye fa-sm mr-2 text-primary"></i></a>
-														<a th:href="@{/clientes/{id}/edit(id=${cliente.getId()})}" title="Empréstimo">
+														<a th:href="@{/movimentacoes/{id}/emprestimo(id=${cliente.getId()})}" title="Emprestar">
                                                             <i class="fas fa-book fa-sm mr-2 text-success"></i></a>
 													</td>
                                             	</tr>
@@ -80,9 +80,6 @@
 										</table>
 									</div>
 									<div class="card-footer">
-										<a th:href="@{/clientes/new}" class="btn btn-secondary">
-											<i class="fas fa-plus fa-sm mr-2"></i>Novo
-										</a>
 									</div>
 								</div>
 							</div>
