Inclusão de imagem de fundo em index.html

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -31,6 +31,13 @@
 				<div class="content">
 					<div class="container">
 						<div class="row">
+							<div style="display: flex; justify-content: center; align-items: top; height: auto;">
+								<img th:src="@{/images/biblioteca_index.jpg}" alt="Imagem da Biblioteca" style="width: 100%; height: auto;">
+							</div>
+
+
+
+
 							<!--
 							<div class="col-lg-6">
 								<div class="card">
