--- a/src/main/resources/templates/movimentacoes/search.html
+++ b/src/main/resources/templates/movimentacoes/search.html
@@ -19,7 +19,7 @@
 					<div class="container">
 						<div class="row mb-2">
 							<div class="col-sm-6">
-								<h3 class="m-0"><i class="fas fa-sign-out-alt fa-sm mr-2"></i>Movimentações</h3>
+								<h3 class="m-0"><i class="fas fa-exchange-alt"></i> Movimentações</h3>
 							</div>
 							<div class="col-sm-6">
 								<ol class="breadcrumb float-sm-right">
@@ -44,22 +44,22 @@
 										<table class="table table-bordered table-striped grid">
 											<thead>
 												<tr>
-													<th>CPF</th>
-													<th>Nome</th>
-													<th>Celular</th>
-													<th>Telefone</th>
-													<th>Email</th>
-													<th>Ação</th>
+													<th class="text-center">CPF</th>
+													<th class="text-center">Nome</th>
+													<th class="text-center">Celular</th>
+													<th class="text-center">Telefone</th>
+													<th class="text-center">Email</th>
+													<th class="text-center">Ação</th>
 												</tr>
                                             </thead>
                                             <tbody>
                                             	<tr th:each="cliente : ${clientes}">
-                                            		<td th:text="${cliente.getCpf()}"></td>
+                                            		<td  class="text-center" th:text="${cliente.getCpf()}"></td>
                                             		<td th:text="${cliente.getNome()}"></td>
-                                            		<td th:text="${cliente.getCellphone()}"></td>
-													<td th:text="${cliente.getTelephone()}"></td>
+                                            		<td  class="text-center" th:text="${cliente.getCellphone()}"></td>
+													<td  class="text-center" th:text="${cliente.getTelephone()}"></td>
 													<td th:text="${cliente.getEmail()}"></td>
-                                            		<td>
+													<td class="text-center align-middle">
                                             			<a th:href="@{/movimentacoes/{id}/view(id=${cliente.getId()})}" title="Visualizar">
 															<i class="fas fa-eye fa-sm mr-2 text-primary"></i></a>
 														<a th:href="@{/movimentacoes/{id}/emprestimo(id=${cliente.getId()})}" title="Emprestar">
@@ -69,12 +69,12 @@
                                             </tbody>
                                             <tfoot>
                                             	<tr>
-													<th>CPF</th>
-													<th>Nome</th>
-													<th>Celular</th>
-													<th>Telefone</th>
-													<th>Email</th>
-													<th>Ação</th>
+													<th class="text-center">CPF</th>
+													<th class="text-center">Nome</th>
+													<th class="text-center">Celular</th>
+													<th class="text-center">Telefone</th>
+													<th class="text-center">Email</th>
+													<th class="text-center">Ação</th>
                                             	</tr>
                                             </tfoot>
 										</table>
