--- a/src/main/resources/templates/movimentacoes/view.html
+++ b/src/main/resources/templates/movimentacoes/view.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Biblio | Movimentações</title>
+		<title>Biblio | Devoluções</title>
 		<link rel="icon" type="image/x-icon" th:href="@{/images/favicon.ico}">
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback">
 		<link rel="stylesheet" th:href="@{/vendors/fontawesome/css/all.min.css}">
@@ -19,11 +19,11 @@
 					<div class="container">
 						<div class="row mb-2">
 							<div class="col-sm-6">
-								<h3 class="m-0"><i class="fas fa-sign-out-alt fa-sm mr-2"></i>Movimentações</h3>
+								<h3 class="m-0"><i class="fas fa-book mr-1"></i><i class="fas fa-arrow-left mr-2"></i>Devoluções</h3>
 							</div>
 							<div class="col-sm-6">
 								<ol class="breadcrumb float-sm-right">
-									<li class="breadcrumb-item"><a th:href="@{/movimentacoes}">Livros Emprestados</a></li>
+									<li class="breadcrumb-item"><a th:href="@{/movimentacoes}">Movimentações</a></li>
 									<li class="breadcrumb-item active">Pesquisar</li>
 								</ol>
 							</div>
@@ -41,29 +41,31 @@
 										</h5>
 									</div>
 									<div class="card-body">
-										<td th:utext="'Livros emprestados por: <strong>' + ${cliente.nome} + '</strong>'"></td>
+										<div class="alert alert-info d-flex align-items-center" role="alert" style="width: 350px; height: 40px;">
+											<span th:utext="'Cliente: <strong>' + ${cliente.nome} + '</strong>'"></span>
+										</div>
 										<table class="table table-bordered table-striped grid">
 											<thead>
 												<tr>
-													<th>Isbn</th>
-													<th>Titulo</th>
-													<th>Autores</th>
-													<th>Idioma</th>
-													<th>Ano De Publicação</th>
-													<th>Disponível</th>
-													<th>Devolução</th>
+													<th class="text-center">Isbn</th>
+													<th class="text-center">Titulo</th>
+													<th class="text-center">Autores</th>
+													<th class="text-center">Idioma</th>
+													<th class="text-center">Ano</th>
+													<th class="text-center">Disponível</th>
+													<th class="text-center">Devolução</th>
 												</tr>
                                             </thead>
                                             <tbody>
 												<tr th:each="livro : ${livrosEmprestados}">
-													<td th:text="${livro.getIsbn()}"></td>
+													<td class="text-center" th:text="${livro.getIsbn()}"></td>
 													<td th:text="${livro.getTitulo()}"></td>
 													<td th:text="${livro.getAutores()}"></td>
-													<td th:text="${livro.getIdioma()}"></td>
-													<td th:text="${livro.getAnoDePublicacao()}"></td>
-													<td th:text="${livro.isDisponivel()} ? 'Sim' : 'Não'"></td>
-													<td>
-														<a th:href="@{/movimentacoes/{id}/devolver(id=${livro.getId()})}" title="Devolver"
+													<td class="text-center" th:text="${livro.getIdioma()}"></td>
+													<td class="text-center" th:text="${livro.getAnoDePublicacao()}"></td>
+													<td class="text-center" th:text="${livro.isDisponivel()} ? 'Sim' : 'Não'"></td>
+													<td class="text-center align-middle">
+														<a th:href="@{/movimentacoes/{id}/devolver(id=${livro.id}, clienteId=${cliente.id})}" title="Devolver"
 														   onclick="return confirm('Confirma a devolução do livro?');">
 															<i class="fas fa-undo-alt fa-sm mr-2 text-danger"></i>
 														</a>
@@ -72,13 +74,13 @@
                                             </tbody>
                                             <tfoot>
                                             	<tr>
-													<th>Isbn</th>
-													<th>Titulo</th>
-													<th>Autores</th>
-													<th>Idioma</th>
-													<th>Ano De Publicação</th>
-													<th>Disponível</th>
-													<th>Devolução</th>
+													<th class="text-center">Isbn</th>
+													<th class="text-center">Titulo</th>
+													<th class="text-center">Autores</th>
+													<th class="text-center">Idioma</th>
+													<th class="text-center">Ano</th>
+													<th class="text-center">Disponível</th>
+													<th class="text-center">Devolução</th>
                                             	</tr>
                                             </tfoot>
 										</table>
